# local_roborock_server

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.example.toml  mitm_redirect.py  mkdocs.yml  onboarding_shared.py  pyproject.toml  repository.yaml  start_onboarding.py  start_onboarding_gui.py  ui.html
docs/: cloudflare_setup.md  custom_cert_management.md  custom_mqtt.md  home_assistant.md  index.md  installation.md  known_limitations.md  onboarding.md  roborock_app.md  support.md  tested_vacuums.md
roborock_local_server_addon/: CHANGELOG.md  DOCS.md  config.yaml
src/roborock_local_server/: __init__.py  __main__.py  backend.py  certs.py  cloud.py  config.py  configure.py  container_entrypoint.py  ha_addon.py  inventory.py  security.py  server.py  standalone_admin.py  zeroconf.py
src/roborock_local_server/bundled_backend/: __init__.py  import_web_inventory_from_cloud.py
src/roborock_local_server/bundled_backend/https_server/: __init__.py  endpoint_rules.py
tests/: conftest.py  test_admin_api.py  test_cloud.py  test_config.py  test_configure.py  test_container_entrypoint.py  test_device_key_recovery.py  test_ha_addon.py  test_home_data_online.py  test_identity_repair.py  test_inventory_serialization.py  test_mqtt_tls_proxy.py  test_onboarding_preflight.py  test_plugin_routes.py  test_protocol_auth.py  test_restart_guidance.py  test_routine_runner.py  test_runtime_credentials.py  test_runtime_state.py  test_security.py  test_supervisor.py  test_topic_bridge.py  test_version_sync.py
(+18 files in other folders)
